--- a/INSTAPDD/viewer.html
+++ b/INSTAPDD/viewer.html
@@ -44,18 +44,13 @@ select {
 /* GRID RESPONSIVO TIPO INSTAGRAM */
 .grid {
   display: grid;
-  grid-template-columns: repeat(3, 1fr); /* 💻 3 columnas en PC */
-  gap: 3px;
-  padding: 3px;
+  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+  gap: 6px;
+  padding: 6px;
 }
-
-/* 📱 Celular: solo 2 columnas */
-@media (max-width: 600px) {
-  .grid {
-    grid-template-columns: repeat(2, 1fr);
-  }
+.grid-item {
+  border-radius: 10px;
 }
-
 /* CUADRO PERFECTO 1:1 */
 .grid-item {
   position: relative;
@@ -271,11 +266,14 @@ let loading = false;
 
 /* CARGAR RELACIONES */
 async function loadRelations() {
-  const { data } = await supabase.from("bookit_entries").select("relation");
+  const { data, error } = await supabase
+    .from("bookit_entries")
+    .select("relation");
 
-  const relations = [...new Set(data
-    .map(r => r.relation)
-    .filter(Boolean)
+  if (error || !data) return;
+
+  const relations = [...new Set(
+    data.map(r => r.relation).filter(Boolean)
   )].sort((a, b) => a.localeCompare(b, "es"));
 
   const sel = document.getElementById("relationFilter");
@@ -463,7 +461,9 @@ async function toggleItem(check) {
 }
 
 /* EVENTOS */
-relationFilter.onchange = () => loadMore(true);
+document.getElementById("relationFilter")
+  .addEventListener("change", () => loadMore(true));
+
 
 window.onscroll = () => {
   if (window.innerHeight + window.scrollY >= document.body.offsetHeight - 200) {
@@ -509,14 +509,6 @@ function openImageModal(url) {
   document.addEventListener("keydown", escCloseModal);
 }
 
-/* ==========================
-   🔍 CERRAR EL MODAL
-========================== */
-function closeImageModal() {
-  const modal = document.getElementById("imgModal");
-  modal.style.display = "none";
-  document.removeEventListener("keydown", escCloseModal);
-}
 /* ==========================
    🔍 ZOOM CON DOBLE CLIC
 ========================== */
