--- a/POSVTA4/corterutamovil.html
+++ b/POSVTA4/corterutamovil.html
@@ -59,7 +59,12 @@ async function cargarFechasPendientes(){
   where("rutaId","==",RUTA_USUARIO)
 );
   const snap=await getDocs(q),ventas=snap.docs.map(d=>d.data()),fechas={};
-  ventas.forEach(v=>{if(v.fecha_txt){const f=v.fecha_txt.split(" ")[0];fechas[f]=(fechas[f]||0)+1;}});
+  ventas.forEach(v => {
+  if (v.fecha_txt) {
+    const f = v.fecha_txt.split(" ")[0];
+    fechas[f] = (fechas[f] || 0) + 1;
+  }
+});
   selectFecha.innerHTML="<option value=''>Selecciona una fecha pendiente...</option>";
   Object.entries(fechas).forEach(([f,c])=>{
     const o=document.createElement("option");o.value=f;o.textContent=`${f} – ${c} ventas pendientes`;selectFecha.appendChild(o);
