--- a/POSVTA4/corterutamovil.html
+++ b/POSVTA4/corterutamovil.html
@@ -203,7 +203,7 @@ localStorage.removeItem("catalogo_fecha");
 
 // 🖨️ IMPRIMIR (ÚNICA VEZ Y ÚLTIMO PASO)
 imprimirRAWBT(texto);
-
+} // 👈 ESTA LLAVE FALTABA
 </script>
 
 <script>
